feat: add ARIA labels for improved accessibility in ShoppingList component

--- a/src/i18n/cs.json
+++ b/src/i18n/cs.json
@@ -29,4 +29,12 @@
   "feedback": {
     "linkCopied": "Odkaz zkopírován do schránky, nyní jej můžete sdílet!"
   }
+  ,
+  "aria": {
+    "changeLanguage": "Změnit jazyk",
+    "openActions": "Otevřít nabídku akcí",
+    "addItem": "Přidat položku",
+    "quantity": "Počet položek pro {item}: {count}",
+    "openItemMenu": "Otevřít nabídku položky {item}"
+  }
 }
