--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -35,6 +35,9 @@
     "openActions": "Open actions menu",
     "addItem": "Add item",
     "quantity": "Quantity for {item}: {count}",
-    "openItemMenu": "Open item menu for {item}"
+    "openItemMenu": "Open item menu for {item}",
+    "unmarkPurchased": "Unmark purchased {item}",
+    "markPurchased": "Mark {item} as purchased",
+    "dragHandle": "Drag {item}"
   }
 }
