feat: add voice input functionality to AddItemForm and enhance internationalization support

--- a/src/i18n/cs.json
+++ b/src/i18n/cs.json
@@ -36,6 +36,11 @@
   "feedback": {
     "linkCopied": "Odkaz zkopírován do schránky, nyní jej můžete sdílet!"
   },
+  "voice": {
+    "start": "Spuštěn hlasový vstup",
+    "stop": "Zastavit hlasový vstup",
+    "listening": "Poslouchám..."
+  },
   "aria": {
     "changeLanguage": "Změnit jazyk",
     "openActions": "Otevřít nabídku akcí",
