fix: update typography variants and add user profile label in multiple languages

--- a/src/i18n/cs.json
+++ b/src/i18n/cs.json
@@ -52,7 +52,8 @@
     "openItemMenu": "Otevřít nabídku položky {item}",
     "unmarkPurchased": "Odznačit zakoupené {item}",
     "markPurchased": "Označit {item} jako zakoupené",
-    "dragHandle": "Přetáhnout položku {item}"
+    "dragHandle": "Přetáhnout položku {item}",
+    "userProfile": "Uživatelský profil"
   },
   "nav": {
     "lists": "Seznamy",
